# safexcore

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: i18n.h
src/cryptonote_core/: blockchain.cpp
src/qtwallet/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qopenwallettask.cpp  qopenwallettask.h  qwallet.cpp  qwallet.h  simplewallet.cpp  simplewallet.h  stackedwidget.cpp  stackedwidget.h  stackedwidget.ui
src/rpc/: core_rpc_server.cpp  core_rpc_server_commands_defs.h
src/simplewallet/: simplewallet.cpp
src/wallet/: wallet.cpp  wallet.h  wallet_safex.cpp
tests/core_tests/: chaingen.cpp
